--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 </body>
 
 
-<div><a href="https://github.com/sebhtml/Ray-Cloud-Browser">Ray Cloud Browser: interactively skim processed genomics data with energy
-</a>
+<div>
+<a href="https://github.com/sebhtml/Ray-Cloud-Browser">Ray Cloud Browser: interactively skim processed genomics data with energy</a>
+</div>
 </html>
