New class for the graph
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 <script type="text/javascript" charset="UTF-8" src="Blitter.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Button.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
+<script type="text/javascript" charset="UTF-8" src="Graph.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Renderer.js"></script>
 <script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Screen.js"></script>
