Added zooming features
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -11,17 +11,24 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 
 <body>
 
+
+<script type="text/javascript" charset="UTF-8" src="Button.js"></script>
+
 <script type="text/javascript" charset="UTF-8" src="Grid.js"></script>
+<script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
+
+<script type="text/javascript" charset="UTF-8" src="Renderer.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Blit.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Blitter.js"></script>
-<script type="text/javascript" charset="UTF-8" src="Button.js"></script>
-<script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
-<script type="text/javascript" charset="UTF-8" src="Kmer.js"></script>
+
 <script type="text/javascript" charset="UTF-8" src="DataStore.js"></script>
+
+<script type="text/javascript" charset="UTF-8" src="Kmer.js"></script>
 <script type="text/javascript" charset="UTF-8" src="GraphOperator.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Graph.js"></script>
-<script type="text/javascript" charset="UTF-8" src="Renderer.js"></script>
-<script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
+<script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
+
+<script type="text/javascript" charset="UTF-8" src="WebDocument.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Screen.js"></script>
 <script type="text/javascript" charset="UTF-8" src="main.js"></script>
 
