The test data is now stored in a external javascript data file
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 
 <body>
 
+<script type="text/javascript" charset="UTF-8" src="globalStore.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Button.js"></script>
 
