A new layout engine was written.
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 
 <script type="text/javascript" charset="UTF-8" src="DataStore.js"></script>
 <script type="text/javascript" charset="UTF-8" src="GraphOperator.js"></script>
+<script type="text/javascript" charset="UTF-8" src="LayoutEngine.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Kmer.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Graph.js"></script>
