Added a message queue
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,6 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 
 <body>
 
-<script type="text/javascript" charset="UTF-8" src="globalStore.js"></script>
-
 <script type="text/javascript" charset="UTF-8" src="Button.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Grid.js"></script>
@@ -22,6 +20,8 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 <script type="text/javascript" charset="UTF-8" src="Blit.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Blitter.js"></script>
 
+<script type="text/javascript" charset="UTF-8" src="Message.js"></script>
+<script type="text/javascript" charset="UTF-8" src="MessageQueue.js"></script>
 <script type="text/javascript" charset="UTF-8" src="DataStore.js"></script>
 <script type="text/javascript" charset="UTF-8" src="GraphOperator.js"></script>
 <script type="text/javascript" charset="UTF-8" src="LayoutEngine.js"></script>
