--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,6 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 
 <body>
 
-<script type="text/javascript" charset="UTF-8" src="Button.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Grid.js"></script>
 <script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
@@ -30,6 +29,8 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 <script type="text/javascript" charset="UTF-8" src="Graph.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
 
+<script type="text/javascript" charset="UTF-8" src="Selector.js"></script>
+<script type="text/javascript" charset="UTF-8" src="Button.js"></script>
 <script type="text/javascript" charset="UTF-8" src="HumanInterface.js"></script>
 <script type="text/javascript" charset="UTF-8" src="WebDocument.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Screen.js"></script>
