added a selector class
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 <script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Inventory.js"></script>
+<script type="text/javascript" charset="UTF-8" src="Selector.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Button.js"></script>
 <script type="text/javascript" charset="UTF-8" src="HumanInterface.js"></script>
 <script type="text/javascript" charset="UTF-8" src="WebDocument.js"></script>
