added detection of screen geometry
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,15 @@
 <title>
 Ray Cloud Browser: interactively skim processed genomics data with energy
 </title>
+
+<style>
+body {width:100%; height:100%; overflow:hidden, margin:0, padding: 0;}
+html {width:100%; height:100%; overflow:hidden}
+</style>
+
 </head>
 
 <body>
-
 
 <script type="text/javascript" charset="UTF-8" src="Grid.js"></script>
 <script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
