started to implement the selection of map
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -35,9 +35,11 @@ html {width:100%; height:100%; overflow:hidden}
 <script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Inventory.js"></script>
+<script type="text/javascript" charset="UTF-8" src="SelectionWidget.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Selector.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Button.js"></script>
 <script type="text/javascript" charset="UTF-8" src="HumanInterface.js"></script>
+
 <script type="text/javascript" charset="UTF-8" src="WebDocument.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Screen.js"></script>
 <script type="text/javascript" charset="UTF-8" src="main.js"></script>
