--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@ html {width:100%; height:100%; overflow:hidden}
 
 <body>
 
+<script type="text/javascript" charset="UTF-8" src="config.js"></script>
+
 <script type="text/javascript" charset="UTF-8" src="Grid.js"></script>
 <script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
 
