added a client class
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@ html {width:100%; height:100%; overflow:hidden}
 
 <script type="text/javascript" charset="UTF-8" src="WebDocument.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Screen.js"></script>
+<script type="text/javascript" charset="UTF-8" src="Client.js"></script>
 <script type="text/javascript" charset="UTF-8" src="main.js"></script>
 
 </body>
