using the service of type RAY_MESSAGE_TAG_GET_MAP_INFORMATION
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@ html {width:100%; height:100%; overflow:hidden}
 <script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Inventory.js"></script>
+<script type="text/javascript" charset="UTF-8" src="IntegerSelectionWidget.js"></script>
 <script type="text/javascript" charset="UTF-8" src="SelectionWidget.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Selector.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Button.js"></script>
