Select location now works like a charm
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@ html {width:100%; height:100%; overflow:hidden}
 <script type="text/javascript" charset="UTF-8" src="MessageQueue.js"></script>
 <script type="text/javascript" charset="UTF-8" src="DataStore.js"></script>
 <script type="text/javascript" charset="UTF-8" src="GraphOperator.js"></script>
+<script type="text/javascript" charset="UTF-8" src="PathOperator.js"></script>
 <script type="text/javascript" charset="UTF-8" src="LayoutEngine.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Kmer.js"></script>
