--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,17 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 </title>
 
 <style>
-body {width:100%; height:100%; overflow:hidden, margin:0, padding: 0;}
-html {width:100%; height:100%; overflow:hidden}
+
+/**
+ * \see http://stackoverflow.com/questions/4288253/html5-canvas-100-width-height-of-viewport
+ */
+
+* { margin:0; padding:0; } /* to remove the top and left whitespace */
+
+html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
+
+canvas { display: block; } /* To remove the scrollbars */
+
 </style>
 
 </head>
