select map if it's provided in the address
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="Inventory.js"></script>
 <script type="text/javascript" charset="UTF-8" src="IntegerSelectionWidget.js"></script>
 <script type="text/javascript" charset="UTF-8" src="SelectionWidget.js"></script>
+<script type="text/javascript" charset="UTF-8" src="AddressManager.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Selector.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Button.js"></script>
 <script type="text/javascript" charset="UTF-8" src="HumanInterface.js"></script>
