show color for each available region
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="Blit.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Blitter.js"></script>
 
+<script type="text/javascript" charset="UTF-8" src="Region.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Message.js"></script>
 <script type="text/javascript" charset="UTF-8" src="MessageQueue.js"></script>
 <script type="text/javascript" charset="UTF-8" src="DataStore.js"></script>
