--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="Graph.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
 
+<script type="text/javascript" charset="UTF-8" src="AnimatedRing.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Inventory.js"></script>
 <script type="text/javascript" charset="UTF-8" src="IntegerSelectionWidget.js"></script>
 <script type="text/javascript" charset="UTF-8" src="SelectionWidget.js"></script>
