--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,11 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="Graph.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
 
+<script type="text/javascript" charset="UTF-8" src="Point.js"></script>
+
 <script type="text/javascript" charset="UTF-8" src="AnimatedRing.js"></script>
+<script type="text/javascript" charset="UTF-8" src="RegionGateAnimation.js"></script>
+
 <script type="text/javascript" charset="UTF-8" src="Inventory.js"></script>
 <script type="text/javascript" charset="UTF-8" src="IntegerSelectionWidget.js"></script>
 <script type="text/javascript" charset="UTF-8" src="SelectionWidget.js"></script>
