add loading animation
Resolves-bug: https://github.com/sebhtml/Ray-Cloud-Browser/issues/21
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@ canvas { display: block; } /* To remove the scrollbars */
 
 <script type="text/javascript" charset="UTF-8" src="Point.js"></script>
 
+<script type="text/javascript" charset="UTF-8" src="LoadingAnimation.js"></script>
 <script type="text/javascript" charset="UTF-8" src="AnimatedRing.js"></script>
 <script type="text/javascript" charset="UTF-8" src="RegionGateAnimation.js"></script>
 
