--- a/client/tests/test_quadtree.html
+++ b/client/tests/test_quadtree.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-
+		<script type="text/javascript" charset="UTF-8" src="Assert.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="../Point.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="../index/QuadTree.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="test_quadtree.js"></script>
