add a test that populates a big quadtree
Signed-off-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/tests/index.html
+++ b/client/tests/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>
-			Ray Cloud Browser: interactively skim processed genomics data with energy
+			Test suite
 		</title>
 	</head>
 
