Client : Replace the grid by QuadTree
Signed-off-by: Jean-François Erdelyi <jean-francois.erdelyi@etu.iut-tlse3.fr>

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@ canvas { display: block; } /* To remove the scrollbars */
 
 <script type="text/javascript" charset="UTF-8" src="config.js"></script>
 
-<script type="text/javascript" charset="UTF-8" src="Grid.js"></script>
+<script type="text/javascript" charset="UTF-8" src="index/QuadTree.js"></script>
 <script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Renderer.js"></script>
