Client : integration of RenderedLine/Circle
Signed-off-by: Jean-François Erdelyi <jean-francois.erdelyi@etu.iut-tlse3.fr>

--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,8 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="index/QuadTree.js"></script>
 <script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
 
+<script type="text/javascript" charset="UTF-8" src="RenderedLine.js"></script>
+<script type="text/javascript" charset="UTF-8" src="RenderedCircle.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Material.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Renderer.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Blit.js"></script>
