Client : add BarnesHutAlgorithm and move elements from root to scene
Signed-off-by: Jean-François Erdelyi <jean-francois.erdelyi@etu.iut-tlse3.fr>

--- a/client/index.html
+++ b/client/index.html
@@ -29,15 +29,20 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="config.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="index/QuadTree.js"></script>
-<script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
+<script type="text/javascript" charset="UTF-8" src="index/BarnesHutAlgorithm.js"></script>
 
-<script type="text/javascript" charset="UTF-8" src="RenderedLine.js"></script>
-<script type="text/javascript" charset="UTF-8" src="RenderedCircle.js"></script>
-<script type="text/javascript" charset="UTF-8" src="RenderedText.js"></script>
-<script type="text/javascript" charset="UTF-8" src="Material.js"></script>
-<script type="text/javascript" charset="UTF-8" src="Renderer.js"></script>
-<script type="text/javascript" charset="UTF-8" src="Blit.js"></script>
-<script type="text/javascript" charset="UTF-8" src="Blitter.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/RenderedLine.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/RenderedCircle.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/RenderedText.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/Material.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/Renderer.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/Blit.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/Blitter.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/LoadingAnimation.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/AnimatedRing.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/RegionGateAnimation.js"></script>
+
+<script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Region.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Message.js"></script>
@@ -52,10 +57,6 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="Vertex.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Point.js"></script>
-
-<script type="text/javascript" charset="UTF-8" src="LoadingAnimation.js"></script>
-<script type="text/javascript" charset="UTF-8" src="AnimatedRing.js"></script>
-<script type="text/javascript" charset="UTF-8" src="RegionGateAnimation.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Inventory.js"></script>
 <script type="text/javascript" charset="UTF-8" src="IntegerSelectionWidget.js"></script>
