--- a/client/tests/index.html
+++ b/client/tests/index.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" charset="UTF-8" src="Assert.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="../Point.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="../index/QuadTree.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="../index/BarnesHutAlgorithm.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="test_quadtree.js"></script>
 
 	</body>
