Client: add health bars and group depth coverage with vertex
Link: https://github.com/sebhtml/Ray-Cloud-Browser/issues/25
Link: https://github.com/sebhtml/Ray-Cloud-Browser/issues/27
Signed-off-by: Jean-François Erdelyi <jean-francois.erdelyi.1@ulaval.ca>
Reviewed-by: Sébastien Boisvert <sebastien.boisvert.3@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="scene/RenderedLine.js"></script>
 <script type="text/javascript" charset="UTF-8" src="scene/RenderedCircle.js"></script>
 <script type="text/javascript" charset="UTF-8" src="scene/RenderedText.js"></script>
+<script type="text/javascript" charset="UTF-8" src="scene/RenderedRectangle.js"></script>
 <script type="text/javascript" charset="UTF-8" src="scene/Material.js"></script>
 <script type="text/javascript" charset="UTF-8" src="scene/Renderer.js"></script>
 <script type="text/javascript" charset="UTF-8" src="scene/Blit.js"></script>
