--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@ canvas { display: block; } /* To remove the scrollbars */
 
 <script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
 
+<script type="text/javascript" charset="UTF-8" src="Distribution.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Region.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Message.js"></script>
 <script type="text/javascript" charset="UTF-8" src="MessageQueue.js"></script>
