Client: add depthPerLocation graph
Signed-off-by: Jean-François Erdelyi <jean-francois.erdelyi.1@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@ canvas { display: block; } /* To remove the scrollbars */
 <script type="text/javascript" charset="UTF-8" src="PhysicsEngine.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="Distribution.js"></script>
+<script type="text/javascript" charset="UTF-8" src="Graphic.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Region.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Message.js"></script>
 <script type="text/javascript" charset="UTF-8" src="MessageQueue.js"></script>
