Client: add TextWidget, the link button use this widget now
Signed-off-by: Jean-François Erdelyi <jean-francois.erdelyi.1@ulaval.ca>

--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,7 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 
 <script type="text/javascript" charset="UTF-8" src="Inventory.js"></script>
 <script type="text/javascript" charset="UTF-8" src="IntegerSelectionWidget.js"></script>
+<script type="text/javascript" charset="UTF-8" src="TextWidget.js"></script>
 <script type="text/javascript" charset="UTF-8" src="SelectionWidget.js"></script>
 <script type="text/javascript" charset="UTF-8" src="AddressManager.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Selector.js"></script>
@@ -61,6 +62,7 @@ Ray Cloud Browser: interactively skim processed genomics data with energy
 <script type="text/javascript" charset="UTF-8" src="Screen.js"></script>
 <script type="text/javascript" charset="UTF-8" src="Client.js"></script>
 <script type="text/javascript" charset="UTF-8" src="main.js"></script>
+<div id="textWidgetBox"></div>
 
 </body>
 
